Ensure 'input' event always fires with the 'composed' flag true.

Bug: 879261
Change-Id: I5513a889df874bef4157245d7ad7454e79777cfa
Reviewed-on: https://chromium-review.googlesource.com/c/1211669
Reviewed-by: Hayato Ito <hayato@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603973}
Former-commit-id: 146a312eb07698ae580ddfa07a640ba24ead58f4